# count-lines

./: .gitignore  Cargo.toml  README.md  test_lines.py
benches/: linecount_bench.rs
linecount/: Cargo.toml
linecount/benches/: linecount_bench.rs
linecount/src/: lib.rs  main.rs
linecount/tests/: linecount_tests.rs
src/: main.rs
tests/: linecount_tests.rs
