[package]
name = "count-lines"
version = "0.1.0"
edition = "2024"
authors = ["Mike Stringer <mike.stringer.internet@gmail.com>"]
description = "Efficiently count lines in files or stdin with estimation for large files."
license = "MIT"
repository = "https://github.com/stringertheory/count-lines"
categories = ["command-line-utilities"]
keywords = ["lines", "cli", "estimation", "files", "stdin"]
exclude = ["/.github", "/target", "/*.log"]

[[bin]]
name = "lc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
anyhow = "1.0"
bytecount = "0.6.8"
byte-unit = "5.1.6"

[dev-dependencies]
tempfile = "3"
criterion = "0.5.1"

[[bench]]
name = "linecount_bench"
harness = false
