[package]
name = "linecount"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
anyhow = "1.0"
bytecount = "0.6.8"
byte-unit = "5.1.6"

[dev-dependencies]
tempfile = "3"
criterion = "0.5.1"

[[bench]]
name = "linecount_bench"
harness = false
